--- a/client/templates/layouts/slide_layout/slide_layout.css
+++ b/client/templates/layouts/slide_layout/slide_layout.css
@@ -1,5 +1,5 @@
 /*****************************************************************************/
-/* Slides: Style */
+/* SlideLayout: Style */
 /*****************************************************************************/
-.slides {
+.slide-layout {
 }
