adding basic slide view

--- a/client/templates/slide/slide.css
+++ b/client/templates/slide/slide.css
@@ -3,3 +3,7 @@
 /*****************************************************************************/
 .slide {
 }
+
+#leaflet-container {
+height: '400px';
+}
