--- a/client/templates/layouts/slide_layout/slide_layout.html
+++ b/client/templates/layouts/slide_layout/slide_layout.html
@@ -1,4 +1,8 @@
+<head>
+  <title>Meteor Leaflet Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+</head>
+
 <template name="SlideLayout">
-  <h1>Find me in app/client/templates/layouts/slide_layout/slide_layout</h1>
   {{> yield}}
 </template>
