cleaning up home view & navbar

--- a/client/templates/layouts/master_layout/master_layout.html
+++ b/client/templates/layouts/master_layout/master_layout.html
@@ -1,4 +1,6 @@
 <template name="MasterLayout">
-  {{> Navbar}}
-  {{> yield}}
+  <div class="container-fluid">
+  <div class="row">{{> Navbar}}</div>
+  <div class="row-fluid">{{> yield}}</div>
+</div>
 </template>
