--- a/client/templates/slide/slide.html
+++ b/client/templates/slide/slide.html
@@ -1,3 +1,3 @@
 <template name="Slide">
-  <div id="map" class="map" options="leafletOptions"></div>
+  <div id="map" class="map"></div>
 </template>
