--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,14 +1,32 @@
 <template name="Home">
   <table class="table table-striped">
+    {{> SlideHeaderRow}}
     <tbody>
       {{#each slides}}
-      <tr>
-        <td>{{title}}</td>
-        <td>{{patient.age}}</td>
-        <td>{{patient.sex}}</td>
-<td><a href="{{pathFor route='slide'}}"><img class="img" src="{{slideUrl}}/0/0/0.jpg"></a></td>
-      </tr>
+        {{> SlideRow}}
       {{/each}}
     </tbody>
   </table>
+</template>
+
+<template name="SlideRow">
+  <tr>
+    <td>{{title}}</td>
+    <td>{{patient.age}}</td>
+    <td>{{patient.sex}}</td>
+    <td>
+      <a href="{{pathFor route='slide'}}">
+        <img class="img" src="{{slideUrl}}/0/0/0.jpg">
+      </a>
+    </td>
+  </tr>
+</template>
+
+<template name="SlideHeaderRow">
+  <thead>
+    <th>Title</th>
+    <th>Age</th>
+    <th>Sex</th>
+    <th>Thumbnail</th>
+  </thead>
 </template>
