adding basic (title-only) search

--- a/client/templates/search/search.html
+++ b/client/templates/search/search.html
@@ -1,26 +1,27 @@
 <template name="Search">
-  {{> esInput index="slides" placeholder="Search by title" }}
+  {{> esInput index="slides" placeholder="Search by slide title" }}
 
-  <table class="table table-striped">
-    {{> SlideHeaderRow}}
-    <tbody>
-    {{#esEach index="slides"}}
-    {{> SlideRow}}
-    {{/esEach}}
-  </tbody>
-</table>
-
-  {{> esLoadMoreButton index="slides"}}
+  {{#ifEsIsSearching index="slides"}}
+    <div>Loading...</div>
+  {{else}}
+    <table class="table table-striped">
+      {{> SlideHeaderRow}}
+      <tbody>
+        {{#esEach index="slides"}}
+        {{> SlideRow}}
+        {{/esEach}}
+      </tbody>
+    </table>
+    {{> esLoadMoreButton index="slides"}}
+  {{/ifEsIsSearching}}
 
   {{#ifEsInputIsEmpty index="slides"}}
-  <div>Enter a search term above to find participants (e.g. '-92' to find all 1992 autopsies)</div>
+  <div>Enter a search term above to find slides</div>
   {{/ifEsInputIsEmpty}}
 
   {{#ifEsHasNoResults index="slides"}}
   <div class="no-results">No results found</div>
   {{/ifEsHasNoResults}}
 
-  {{#ifEsIsSearching index="slides"}}
-  <div>Loading...</div>
-  {{/ifEsIsSearching}}
+
 </template>
