--- a/client/templates/slide/slide.css
+++ b/client/templates/slide/slide.css
@@ -1,9 +1,9 @@
 /*****************************************************************************/
 /* Slide: Style */
 /*****************************************************************************/
-.slide {
-}
 
+.slide {}
+  
 #leaflet-container {
-height: '400px';
+  height: '400px';
 }
